force-app/main/resources/objects/Resource_Version__c/Resource_Version__c.object-meta.xml
<CustomObject>
    <label>Resource Version</label>
    <nameField>
        <displayFormat>RV - {00000}</displayFormat>
        <label>Resource Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>