force-app/main/resources/objects/Resource_Version__c/fields/Content_Text__c.field-meta.xml
<CustomField>
    <fullName>Content_Text__c</fullName>
    <label>Content Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>