force-app/main/resources/objects/Resource_Version__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>500</length>
    <type>Html</type>
</CustomField>